# pirl-navrl

./: .dockerignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
codex_tasks/: TASK_01_gym_pybullet_drones_phase1_setup_and_demo.md  TASK_02_ego_planner_sidecar_bridge_and_egolike_scene.md  TASK_03_unified_scenario_policy_rollout_framework.md  TASK_04_pretraining_gym_pybullet_drones_rl_ready_adapter.md  TASK_05_navrl_informed_ppo_debug_training.md  TASK_06_SCENE_SCALE_CALIBRATION_PATCH.md  TASK_06_navrl_guided_multiscenario_ppo_case_replay.md  TASK_07_task06_hardening_training_protocol.md  TASK_08_navrl_aligned_curriculum_training.md
configs/: phase1_simple_demo.json  phase2_ego_like_smoke.json  task04_gym_pybullet_static_nav_debug.json
docs/: 00_platform_decision.md  01_phase1_scope.md  02_phase2_ego_sidecar_plan.md  03_task03_unified_rollout_framework.md  04_task04_gym_pybullet_drones_adapter.md  06_task06_navrl_guided_multiscenario_ppo_case_replay.md  07_task07_navrl_style_forest_scene_update.md  07_task07_task06_hardening.md  08_task08_navrl_aligned_curriculum_training.md  PROJECT_MANAGEMENT.md  REPO_REVIEW.md  TASK_02_COMPLETION_REPORT.md  ego_official_sidecar_baseline_path.md  navrl_guided_training_adjustments_task06.md  navrl_reference_scope.md
pirl_navrl/: __init__.py
scripts/: check_gym_pybullet_drones_install.py  check_task04_rl_ready_env.py  mirror_official_ego_ros_trace.py  render_ego_pybullet_bridge_visual.py  run_ego_pybullet_bridge_node.py  run_ego_pybullet_bridge_visual.sh  run_ego_pybullet_live_gui.sh  run_gym_pybullet_drones_examples.py  (+10 more)
(+37 files in other folders)
